--- a/examples/icons.html
+++ b/examples/icons.html
@@ -4,12 +4,15 @@
 <link rel="stylesheet" href="../css/hw.min.css">
 
 <div class="container">
-  <h3>Icons</h3>
+  <!-- <h3>Icons</h3>
   <h1>
     <span class="hw-icon hw-icon-comments">Dialogue Tool</span>
   </h1>
 
   <h1>
     <span class="hw-icon hw-icon-cog">Settings</span>
-  </h1>
+  </h1> -->
+  <i class="hw-icon hw-icon-comments">Commnets</i><br>
+  <i class="hw-icon-bg hw-icon-bg-cog">Settings</i><br>
+  <i class="hw-icon-bg-cog-lg">Settings</i><br>
 </div>
