add custom button style base on Sakae style

--- a/examples/newcomponents.html
+++ b/examples/newcomponents.html
@@ -36,5 +36,22 @@
 
 <p>BUTTONS</p>
 
-<a href="#" class="hw-btn hw-btn-primary">Primary Button</a>
-<a href="#" class="hw-btn hw-btn-secondary">Secondary Button</a>
+<a href="#" class="btn btn-primary">Primary Button</a>
+<a href="#" class="btn btn-secondary">Secondary Button</a>
+<a href="#" class="btn btn-tertiary">Tertiary Button</a>
+<a href="#" class="btn btn-disable">Disabled Button</a>
+<a href="#" class="btn btn-focused">Focused Button</a>
+<a href="#" class="btn btn-progress">Progress Button</a>
+
+<div style="padding-top: 10px;">
+  <a href="#" class="btn btn-cancel">Cancel</a>
+  <a href="#" class="btn btn-file">Choose file</a>
+</div>
+
+<p>SEARCH BAR</p>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+<div class="form-search-box">
+  <span class="icon"><i class="fas fa-search"></i></span> <!-- Unicode for magnifying glass icon -->
+  <input type="text" placeholder="Search user by email">
+  <span class="clear-icon"><i class="fas fa-times-circle"></i></span>
+</div>
